# akasha

./: .dockerignore  .gitignore  Cargo.toml  README.md  compose.yaml
backend/: .gitignore  Cargo.toml  build.rs
backend/src/: config.rs  lib.rs  main.rs  types.rs
backend/src/metrics/: in_memory.rs  mod.rs  prelude.rs  telemetry.rs
backend/src/routes/: evaluation_service.rs  flag_service.rs  metrics_service.rs  mod.rs
backend/src/storage/: blob.rs  in_memory.rs  mod.rs  prelude.rs
backend/tests/: blob_tests.rs
cli/: Cargo.toml  build.rs
cli/src/: main.rs
clients/python/: Makefile  pyproject.toml
clients/python/src/akasha/: client.py
dockerfiles/: Dockerfile.backend  Dockerfile.frontend
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  CreateFlag.tsx  FlagList.tsx
frontend/src/proto/: AkashaServiceClientPb.ts  akasha.ts  akasha_pb.d.ts  akasha_pb.js
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  backend-deployment.yaml  backend-service.yaml  web-deployment.yaml  web-service.yaml
proto/: Cargo.toml  akasha.proto  build.rs
web/: next.config.mjs  package-lock.json  package.json  tsconfig.json
web/app/api/: errors.ts  route.ts
web/app/api/flags/: route.ts
web/app/api/flags/[id]/: route.ts
web/app/components/: FlagTargetingRules.tsx
web/app/flags/: page.tsx
web/app/flags/[id]/: page.tsx
web/app/flags/new/: page.tsx
web/app/types/: flag.ts
web/types/: models.ts
