[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { version = "0.9", features = ["transport"] }
prost = "0.11"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
tonic-web = "0.9"

[build-dependencies]
tonic-build = "0.9"
