[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
proto = { path = "../proto" }
tonic = { version = "0.12.2", features = ["transport"] }
prost = "0.13.2"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
tower-layer = "0.3.3"
azure_storage_blobs = "0.20.0"
azure_identity = "0.20.0"
azure_core = "0.20.0"
futures = "0.3.30"
azure_storage = "0.20.0"
serde_json = "1.0.128"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.6.1", features = ["trace"] }
http = "1.1.0"
opentelemetry = "0.26.0"
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio", "tokio"] }
tracing-opentelemetry = "0.27.0"
opentelemetry-otlp = "0.26.0"

[build-dependencies]
tonic-build = "0.9"
